# ticket_automation_tool

./: .gitignore  .ssh_key  approval_finder.py  automation_logger.py  carrier_intel_loader.py  config.py  duckdb_fqdn_lookup.py  entity.py  etp_intel_fetcher.py  get_az_secret.py  git_repo_manager.py  indicator.py  initialise_mongo.py  intel_entry.py  intel_processor.py  jira_ticket_resolver.py  key_handler.py  key_loader.py  main.py  main_intel_updater.py  main_summary_creator.py  main_ticket_analyser.py  pyproject.toml  requirements.txt  response_creator.py  rule_fetcher.py  rule_table.csv  run_time_collector.sh  s3_client.py  s3_file_transfer.py  s3_fqdn_lookup.py  setup.py  sps_intel_fetcher.py  summary_creator.py  sync_sps_tickets.sh  ticket.py  ticket_fetcher.py  ticket_resolver.py  ticket_responder.py  ticket_responder_update.py  (+3 more)
.sps_server_process/: intel_finder.py  intel_query.py  intel_updater.py  pi_cat_query.py  s3_client.py  s3_intel_updater.py  s3_process.py
sps_server_process/: intel_query.py  intel_updater.py  ioc_query.py  s3_client.py  s3_intel_updater.py  s3_process.py  sps_data_main.py  webroot_query.py
